chapitres/11/gatekeeper/constraint-template-v1.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabelappkubernetesioname
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabelAppKubernetesIoName
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabelappkubernetesioname

        violation[{"msg": msg}] {
          not input.review.object.metadata.labels["app.kubernetes.io/name"]
          msg := "Objects must have an annotation 'app.kubernetes.io/name'"
        }
